# ruma-bot

./: Cargo.toml
examples/: echo.rs
macro/: Cargo.toml
macro/src/: args.rs  lib.rs
macros/: Cargo.toml
macros/src/: args.rs  lib.rs
src/: command_handler_fn.rs  debug.rs  lib.rs  state.rs  util.rs  wrap.rs
tests/: echo.rs
