[package]
name = "ruma-bot"
version = "0.1.0"
authors = ["Jonas Platte <jplatte+git@posteo.de>"]
edition = "2018"

[dependencies]
anymap = "0.12.1"
failure = "0.1.5"
futures-preview = "0.3.0-alpha.17"
js_int = "0.1.2"
hyper = { git = "https://github.com/hyperium/hyper" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
ruma-client = { git = "https://github.com/ruma/ruma-client", branch = "async_await" }
url = "2.0.0"

[dependencies.ruma-bot-macros]
path = "macros"

[dev-dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"

[workspace]
members = ["macro"]
