[package]
name = "ruma-bot"
version = "0.1.0"
authors = ["Jonas Platte <jplatte+git@posteo.de>"]
edition = "2018"

[dependencies]
anymap = "0.12.1"
failure = "0.1.5"
futures-preview = "0.3.0-alpha.17"
hyper = { git = "https://github.com/hyperium/hyper" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
ruma-client = { git = "https://github.com/ruma/ruma-client", branch = "async_await" }
tokio = { git = "https://github.com/tokio-rs/tokio" }
url = "2.0.0"

[dependencies.ruma-bot-macros]
path = "macros"

[patch.crates-io.ruma-events]
git = "https://github.com/ruma/ruma-events"
rev = "1b0be0d0e7fa1040fc51b748256b290e24677b19"

[patch.'https://github.com/ruma/ruma-client-api'.ruma-client-api]
# Cargo doesn't allow using a different branch of the same repository. Trick it into thinking that
# we're using a different repository.
git = "https://github.com/ruma/ruma-client-api.git"
branch = "request-ctors"

[workspace]
members = ["macros"]
